tests/equality/eqchk_exceptions.m31.ref
File "./equality/eqchk_exceptions.m31", line 10, characters 57-102:
Type error: unknown name base.print
